--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 .country {
 	fill: #999;
 }
+
+body {
+	font: 10px sans-serif;
+}
+
+.axis line,
+.axis path {
+	fill: none;
+	stroke: #000;
+	shape-rendering: crispEdges;
+}
